2007-08-21  Richard Guenther  <rguenther@suse.de>

PR middle-end/33122
	* fold-const.c (fold_binary): Remove index +p PTR folding.
	Fix types of POINTER_PLUS_EXPR generated by folding of
	(PTR +p B) +p A.

        * gcc.c-torture/compile/pr33122.c: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@127659 138bc75d-0d04-0410-961f-82ee72b054a4