gcc/fold-const.c
@@ -9528,20 +9528,17 @@ fold_binary (enum tree_code code, tree type, tree op0, tree op1)
 						fold_convert (sizetype, arg1),
 						fold_convert (sizetype, arg0)));
 
-      /* index +p PTR -> PTR +p index */
-      if (POINTER_TYPE_P (TREE_TYPE (arg1))
-	  && INTEGRAL_TYPE_P (TREE_TYPE (arg0)))
-        return fold_build2 (POINTER_PLUS_EXPR, type,
-	                    fold_convert (type, arg1), fold_convert (sizetype, arg0));
-
       /* (PTR +p B) +p A -> PTR +p (B + A) */
       if (TREE_CODE (arg0) == POINTER_PLUS_EXPR)
 	{
 	  tree inner;
 	  tree arg01 = fold_convert (sizetype, TREE_OPERAND (arg0, 1));
 	  tree arg00 = TREE_OPERAND (arg0, 0);
-	  inner = fold_build2 (PLUS_EXPR, sizetype, arg01, fold_convert (sizetype, arg1));
-	  return fold_build2 (POINTER_PLUS_EXPR, type, arg00, inner);
+	  inner = fold_build2 (PLUS_EXPR, sizetype,
+			       arg01, fold_convert (sizetype, arg1));
+	  return fold_convert (type,
+			       fold_build2 (POINTER_PLUS_EXPR,
+					    TREE_TYPE (arg00), arg00, inner));
 	}
 
       /* PTR_CST +p CST -> CST1 */
@@ -9559,6 +9556,7 @@ fold_binary (enum tree_code code, tree type, tree op0, tree op1)
 	}
 
       return NULL_TREE;
+
     case PLUS_EXPR:
       /* PTR + INT -> (INT)(PTR p+ INT) */
       if (POINTER_TYPE_P (TREE_TYPE (arg0))
